Добавлено создание инспекций
+ добавлено окно для принятия заявки на осмотр
+ добавлен скролл в комбобокс
+ добавлен текст бокс с датой
+ другие незначительные изменения

--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/EditApplicationDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/EditApplicationDialog.xaml
@@ -28,7 +28,7 @@
                        Margin="0 0 0 16"
                        TextWrapping="Wrap">
                 <Run Text="Редактирование заявки"/>
-                <Run Text="{Binding ApplicationNumber}"/>
+                <Run Text="{Binding ApplicationNumber, StringFormat={}№{0}}"/>
             </TextBlock>
 
             <!-- Подзаголовок -->
