--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/EditApplicationDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/EditApplicationDialog.xaml
@@ -58,7 +58,7 @@
                        Margin="0 0 0 4"/>
 
             <TextBlock DockPanel.Dock="Top"
-                       Text="* - фиксированная сумма гос. пошлины при постанвке автомобиля на учет в ГИБДД"
+                       Text="* - фиксированная сумма гос. пошлины при постановке автомобиля на учет в ГИБДД"
                        Opacity="0.5"
                        Style="{StaticResource TextBlock.Subtitle}"/>
 
