--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoApplicationDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoApplicationDialog.xaml
@@ -198,7 +198,7 @@
                                TextWrapping="Wrap">
                     <Run Text="Дата подтверждения:" 
                          Style="{StaticResource Run.Subtitle}"
-                         Name="dateTimeConfirmTB"/>
+                         Name="datetimeConfirmTB"/>
                     <Run Text="{Binding DatetimeConfirm, StringFormat={}{0:dd.MM.yyyy HH:mm}, TargetNullValue='Не подтверждена'}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
@@ -206,7 +206,9 @@
                     <TextBlock DockPanel.Dock="Top"
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
-                    <Run Text="Дата принятия на осмотр:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="Дата принятия на осмотр:" 
+                         Style="{StaticResource Run.Subtitle}"
+                         Name="datetimeInspectionTB"/>
                     <Run Text="{Binding DatetimeAccept, StringFormat={}{0:dd.MM.yyyy HH:mm}, TargetNullValue='Не принята'}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
